# joke-programs

./: CMakeLists.txt  README.md
ALERTA.EXE_SRC/: CMakeLists.txt  LICENSE  Makefile  alerta.c  bluescreen.c  bluescreen.h  errmsgbox.h  resource.h  resource.rc
KINGVON.EXE_SRC/: CMakeLists.txt  Makefile  keyblock.c  keyblock.h  kingvon.c  main.cc  resource.h  resource.rc  videoplayer.c  videoplayer.cc  videoplayer.h  videoplayer.hh
MOUSEMVD.EXE_SRC/: CMakeLists.txt  Makefile  mousemvd.c  resource.h  resource.rc
RECYCLE.EXE_SRC/: CMakeLists.txt  Makefile  itemmovectx.c  itemmovectx.h  recycle.c  resource.rc
